--- a/ODS.ipynb
+++ b/ODS.ipynb
@@ -330,7 +330,7 @@
     "    # Find password box\n",
     "    password_box = browser.find_element(By.NAME, 'Password')\n",
     "    # Send password box information\n",
-    "    password_box.send_keys('Ln##9uFT')\n",
+    "    password_box.send_keys('Ln##9uFTLn##9uFT')\n",
     "    \n",
     "    # Find login button and Click \n",
     "    login_button =  WebDriverWait(browser, 10).until(EC.element_to_be_clickable((By.NAME, 'login')))\n",
